refactor: 完成内容迁移和结构重组
- 删除旧的migrated目录下的文章文件
- 将文章按年份重新组织到对应目录 (2023/, 2024/, 2025/)
- 添加暗色背景图片支持
- 添加TOC高亮显示功能
- 清理无用的构建脚本和临时文件
- 优化主题CSS输出文件

文件结构优化：
- content/posts/2023/ - 2023年文章
- content/posts/2024/ - 2024年文章
- content/posts/2025/ - 2025年文章
- 移除重复和测试文件

--- a/content/posts/2024/2024-3-4-1229-日期问题-cpp.md
+++ b/content/posts/2024/2024-3-4-1229-日期问题-cpp.md
@@ -1,13 +1,13 @@
 ---
-date: '2025-08-07'
-draft: false
----
-
-title: 2024-3-4-1229-日期问题.cpp
+title: "2024-3-4-1229-日期问题.cpp"
 author: cai6
 abbrlink: 22460
 date: 2024-03-04 18:23:26
-tags: 算法
+draft: false
+tags: 
+  - 算法
+categories:
+  - 技术
 ---
 # 2024-3-4-1229-日期问题.cpp
 
