--- a/content/posts/2025/2025-05-25-小张的像素风照片.md
+++ b/content/posts/2025/2025-05-25-小张的像素风照片.md
@@ -9,6 +9,8 @@ title: 小张的像素风照片
 
 # 小张的像素风照片
 
+{{% encrypt pengcai101027 %}}
 ![1](/images/posts/小张的像素风照片/image1.png)
 ![2](/images/posts/小张的像素风照片/image2.jpg)
 ![3](/images/posts/小张的像素风照片/image3.png)
+{{% /encrypt %}}
