--- a/content/posts/2025/2025-5-24.md
+++ b/content/posts/2025/2025-5-24.md
@@ -9,6 +9,7 @@ title: 2025-5-24
 
 # 又是好吃的一天
 
+{{% encrypt pengcai101027 %}}
 今天小张发给我很多好吃的，我很开心。  
 什么时候才能再次吃到小张做的美食呢？
 **很好奇知了猴的味道。**
@@ -17,3 +18,4 @@ title: 2025-5-24
 ![馒头蛋糕](https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL2kvYy81YjQ2ZmEzMThhOTY2YjUxL0VaS09wVUROcnZ0QXRac3J6UmM1SHV3QklTUEhzTkZQd1ZJRFhGcVBvaDA5UkE_ZT1UbFI1TkM.jpg)
 ![馒头蛋糕](https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL2kvYy81YjQ2ZmEzMThhOTY2YjUxL0VaZ0JKNHUwU3Z0RnFzZFhYTW53R3VZQmxiV3I1WEFWeGtxTndqR3hmS1lueEE_ZT1YRHlLM1Q.jpg)
 ![想尝尝是什么味道](https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL2kvYy81YjQ2ZmEzMThhOTY2YjUxL0VWMTdwZFpfMUdaQmwwRmRGRU5SaERFQkdPclF5MzBYY3RUOTV5eld5VkNkM2c_ZT1yemg1Zlc.jpg)
+{{% /encrypt %}}
