--- a/content/posts/2025/2025-05-30-小张开车视频.md
+++ b/content/posts/2025/2025-05-30-小张开车视频.md
@@ -9,9 +9,16 @@ title: 小张开车视频
 
 ## 小张开车视频
 
+
+{{% encrypt pengcai101027 %}}
+
+
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
   <video width="100%" height="100%" controls style="position: absolute; top: 0; left: 0;">
     <source src="https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3YvYy81YjQ2ZmEzMThhOTY2YjUxL0VhNngwN3RobHdSQWpMR1J6aW9icTZnQmhCQmVrSGhMZEQyOFVEazBEY1UxTmc_ZT1hekw3c1g.mp4" type="video/mp4">
     您的浏览器不支持视频标签。
   </video>
 </div>
+
+
+{{% /encrypt %}}
